@@ -32,6 +32,10 @@ ChangeLog
 
 .. should insert NEXT: at the beginning of line for next key
 
+0.15.10 (2017-06-24):
+  - fix for issue 130, regression in nested merge keys (reported by
+    `David Fee <https://bitbucket.org/dfee/>`_)
+
 0.15.10 (2017-06-23):
   - top level PreservedScalarString not indented if not explicitly asked to
   - remove Makefile (not very useful anyway)
